[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Hud/dialogBox.png" type="Texture" id=1]
[ext_resource path="res://Assets/Hud/Fonts/Ticketing.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Hud/TextBoxDialog/dialogHud.gd" type="Script" id=3]
[ext_resource path="res://Music/FX_Character_Talking/Fawu.wav" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 37
font_data = ExtResource( 2 )

[node name="dialogHud" type="CanvasLayer"]
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -178.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="TextureRect"]
stream = ExtResource( 4 )

[node name="CurrentText" type="RichTextLabel" parent="TextureRect"]
anchor_left = 0.321
anchor_top = 0.112
anchor_right = 0.321
anchor_bottom = 0.112
margin_left = 0.199982
margin_top = 0.0639992
margin_right = 493.2
margin_bottom = 138.064
rect_clip_content = false
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterExpresion" type="TextureRect" parent="TextureRect"]
anchor_left = 0.089
anchor_top = 0.112
anchor_right = 0.089
anchor_bottom = 0.112
margin_left = -2.2
margin_top = 0.0639992
margin_right = 129.8
margin_bottom = 138.064
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="TextureRect"]

[connection signal="tween_completed" from="TextureRect/Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="tween_step" from="TextureRect/Tween" to="." method="_on_Tween_tween_step"]
